--- a/FunctionApp1/FunctionApp1.csproj
+++ b/FunctionApp1/FunctionApp1.csproj
@@ -3,7 +3,8 @@
     <TargetFramework>net461</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.26" />
+    <PackageReference Include="MySql.Data" Version="8.0.15" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
